# BioEval

./: .gitignore  .gitmodules  EVALUATION_AUDIT.md  README.md  output.txt
bioeval/: .dockerignore  .env.example  README.md  pyproject.toml
bioeval/bioeval/: __init__.py  agent_tools.py  bedrock_client.py  bedrock_cost.py  catalog.py  curation.py  data_agent.py  data_agent_prompt.py  experiment_agent.py  experiment_validation.py  guard.py  init_run.py  judge.py  opencode_runner.py  print_prompt.py  problems.py  providers.py  run_bedrock_uea.py  run_record.py  schemas.py  search_proxy.py
bioeval/bioeval/container_tools/: bioeval_session  bioeval_tool_common.py  check_space.py  design_experiment.py  experiment_contract.py  fetch_webpage.py  read_file.py  record_event.py  record_shell_command.py  request_data.py  research_papers.py  restricted_python.py  run_command.py  sandbox_exec.py  search.py  submit_answer.py  uea_bedrock_agent.py  web_search.py
bioeval/bioeval/evaluators/: __init__.py  biology.py  registry.py
bioeval/bioeval/problem_specs/: butterfly_longevity.yaml  chromatin_state_dynamics.yaml  f1_atpase_markov.yaml  forge_cancer_response.yaml  global_river_methane.yaml  gut_mag_diversity.yaml  human_made_mass.yaml  idr_condensate_miscibility.yaml  rna_hydration.yaml  (+7 more)
bioeval/docker/: Dockerfile.data-agent  Dockerfile.experiment-agent  Dockerfile.uea  compose.yaml
bioeval/tests/: test_data_grant_policy.py  test_experiment_agent.py  test_guardrail_hardening.py  test_judge_scoring.py  test_problem_readiness.py  test_run_command_sandbox.py  test_submit_answer.py
(+1868 files in other folders)
